# scrape

./: .env.example  install.sh  prompt.md  pyproject.toml  requirements.txt  start_browser_harness.sh  terminal.md  test_nexus_core.py
nexus/: config.py  main.py
nexus/anti_bot/: __init__.py  captcha_solver.py  stealth.py  tls_fingerprint.py  waf_bypass.py
nexus/api/: __init__.py
nexus/api/middleware/: __init__.py  auth.py  rate_limit.py
nexus/api/routes/: __init__.py  bulk.py  compliance.py  control.py  fusion.py  health.py  scrape.py  stats.py  watch.py
nexus/api/schemas/: bulk.py  scrape.py
nexus/core/: __init__.py  allegro_parser.py  browser.py  engine.py  extractor.py  output.py  proxy.py  queue.py
nexus/db/: __init__.py  models.py
nexus/innovations/: __init__.py  biometrics.py  compliance.py  data_fusion.py  dom_predictor.py  event_trigger.py
nexus/storage/: cache.py  database.py  models.py
nexus/utils/: logger.py  retry.py
tests/: conftest.py  test_control_plane.py  test_engine.py  test_innovations.py  test_scraping.py
